--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,33 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .test {
-    @apply text-3xl text-center w-full h-full
+  @apply text-3xl text-center w-full h-full;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.tp {
+  @apply text-[#210b2c];
+}
+.bp {
+  @apply bg-[#210b2c];
+}
+.tg {
+  @apply text-[#ffd700];
+}
+.gp {
+  @apply bg-[#ffd700];
 }
 
-.text-p, .bg-p {
-    color: #210B2C;
+.text-p,
+.bg-p {
+  color: #210b2c;
 }
 
 .text-g,
 .bg-g {
-    color: #FFD700;
+  color: #ffd700;
 }
