--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow-x: clip;
 }
 .tp {
   @apply text-[#210b2c];
