--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 .tp {
