--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,13 @@
   font-family: "Umar";
 }
 
+html,
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .tp {
